# FastMCP-Blueprint

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/skills/add-resource/: SKILL.md
.github/skills/add-resource/assets/: resource_template.md  test_template.md
.github/skills/add-resource/references/: resource-conventions.md
.github/skills/add-route/: SKILL.md
.github/skills/add-route/assets/: route_template.md  test_template.md
.github/skills/add-route/references/: route-conventions.md
.github/skills/add-tool/: SKILL.md
.github/skills/add-tool/assets/: test_template.md  tool_template.md
.github/skills/add-tool/references/: tool-conventions.md
.github/skills/auth-setup/: SKILL.md
.github/skills/auth-setup/references/: readme-auth-section.md
.github/skills/bootstrap-personalize/: SKILL.md
.github/skills/bootstrap-personalize/references/: file-substitutions.md
.github/skills/deployment-profile/: SKILL.md
.github/skills/deployment-profile/assets/: docker-compose.md  dockerfile.md  (+1 more)
.github/skills/docs-sync/: SKILL.md
.github/skills/observability-setup/: SKILL.md
.github/skills/release-readiness/: SKILL.md
.github/skills/rename-project/: SKILL.md
.github/skills/test-scaffold/: SKILL.md
scripts/: generate_cert.py
src/fastmcp_blueprint/: __main__.py  config.py  logging_setup.py  server.py
src/fastmcp_blueprint/routes/: health.py
src/fastmcp_blueprint/tools/: hello_world.py
tests/: conftest.py  test_config.py  test_health.py  test_hello_world.py  test_tools.py
(+5 files in other folders)
