[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FastMCP-Blueprint"
version = "0.1.0"
description = "A FastMCP blueprint for easy setup and configuration."
requires-python = ">=3.13"
dependencies = [
    "fastmcp~=3.1",
    "python-dotenv~=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-env~=1.1",
    "ruff~=0.15",
    "trustme~=1.2",
    "pre-commit~=4.5",
]

[project.scripts]
fastmcp-blueprint = "fastmcp_blueprint.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_blueprint"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"